testcases/error/unevaluable_value_const_value.veryl
module unevaluable_value_const_value {
    let a: logic = 1;
    const b: logic = a;
}
